--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://username:password@localhost:5432/garden_tracker
+DATABASE_URL=postgresql://fridge_tracker_user:mJZrFiR0PicBvmY08UWgfbPm5Aa8XZf8@dpg-d43ujrili9vc73dh6u60-a/fridge_tracker?options=-csearch_path%3Dgarden-tracker
 SECRET_KEY=your-secret-key-here
 FLASK_ENV=development
 # Zone 7a/b Last Frost Date (approximate: April 15)
